Update home page, category, detail

--- a/Source/TeduShop.Web/Views/Shared/CategoryXipo.cshtml
+++ b/Source/TeduShop.Web/Views/Shared/CategoryXipo.cshtml
@@ -78,7 +78,7 @@
         <ul>
             <li style="padding: 0 7px;">
                 <a href="#">
-                    <img src="data/home.png" style="margin-top: 5px;" width="20" />
+                    <img src="/Assets/client/data/home.png" style="margin-top: 5px;" width="20" />
                 </a>
             </li>
 
@@ -180,7 +180,7 @@
         <div id="banner2ab">
 
             <a target="_blank" class="href_ads_home3B" href="#" style="position: absolute; width: 100%; height: 100%;"></a>
-            <img src="data/1000x120.jpg" alt="" style="border: 0px; display: block; overflow: hidden; margin: 0px auto; width: 1000px; height: 120px;">
+            <img src="/Assets/client/data/1000x120.jpg" alt="" style="border: 0px; display: block; overflow: hidden; margin: 0px auto; width: 1000px; height: 120px;">
         </div>
         <div class="clear"></div>
     </div>
