--- a/Source/TeduShop.Web/Views/Shared/FooterXipo.cshtml
+++ b/Source/TeduShop.Web/Views/Shared/FooterXipo.cshtml
@@ -36,18 +36,18 @@
                     </div>
                     <div class="extra col-sm-6">
                         <p>
-                            <a class="social" href="#" target="_blank">
-                                <img src="data/facebook.png" style="height: 28px; width: 28px;" />
+                            <a class="social1" href="#" target="_blank">
+                                <img src="/Assets/client/data/facebook.png" style="height: 28px; width: 28px;" />
                             </a>
 
                             <a class="social" href="#" target="_blank">
-                                <img src="data/twitter.png" style="height: 28px; width: 28px;" />
+                                <img src="/Assets/client/data/twitter.png" style="height: 28px; width: 28px;" />
                             </a>
                             <a class="social" href="#" target="_blank">
-                                <img src="data/google-plus.png" style="height: 28px; width: 28px;" />
+                                <img src="/Assets/client/data/google-plus.png" style="height: 28px; width: 28px;" />
                             </a>
                             <a class="social" href="#" target="_blank">
-                                <img src="data/youtube.png" style="width: 28px; height: 28px;" />
+                                <img src="/Assets/client/data/youtube.png" style="width: 28px; height: 28px;" />
                             </a>
                             <span class="g-plusone">&nbsp;</span>
                             <span class="fb-like" data-action="like" data-href="https://www.facebook.com/xehay" data-layout="button" data-show-faces="true" style="text-align: center;">&nbsp;</span>
@@ -55,13 +55,13 @@
                         </p>
                         <p>
                             <a class="social" href="#" target="_blank">
-                                <img src="data/logo_tttd.jpg" style="height: 28px;" />
+                                <img src="/Assets/client/data/logo_tttd.jpg" style="height: 28px;" />
                             </a>
                             <a class="social" href="#" target="_blank">
-                                <img src="data/tuoitre-doisong.jpg" style="height: 28px;" />
+                                <img src="/Assets/client/data/tuoitre-doisong.jpg" style="height: 28px;" />
                             </a>
                             <a class="social" href="#" target="_blank">
-                                <img src="data/tuoitre-phapluat.png" style="height: 28px;" />
+                                <img src="/Assets/client/data/tuoitre-phapluat.png" style="height: 28px;" />
                             </a>
                         </p>
                     </div>
