--- a/Source/TeduShop.Web/Views/Shared/HeaderXipo.cshtml
+++ b/Source/TeduShop.Web/Views/Shared/HeaderXipo.cshtml
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="mobile-menu">
-            <img src="data/icon-menu-v4.gif" class="open-menu" />
+            <img src="/Assets/client/data/icon-menu-v4.gif" class="open-menu" />
 
             <div class="mnav animatedExpand fadeInDownExpand" id="mobile-menu">
                 <ul>
@@ -33,7 +33,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="data/ic_home.v4.png" style="margin-top: 5px;" />Trang chủ
+                            <img src="/Assets/client/data/ic_home.v4.png" style="margin-top: 5px;" />Trang chủ
                         </a>
                     </li>
                     <li>
