--- a/Source/TeduShop.Web/Views/Shared/LayoutsXipo.cshtml
+++ b/Source/TeduShop.Web/Views/Shared/LayoutsXipo.cshtml
@@ -94,7 +94,7 @@
         @{ Html.RenderAction("FooterXipo", "Home");}
     </div>
     <div class="mobile scrolltotop">
-        <img src="data/gototop.png" />
+        <img src="/Assets/client/data/gototop.png" />
     </div>
 
     <script type="text/javascript">
