--- a/Source/TeduShop.Web/Assets/client/css/colorbox.css
+++ b/Source/TeduShop.Web/Assets/client/css/colorbox.css
@@ -338,7 +338,7 @@ height: 30px;
                     padding: 0 10px;
                 }
 
-                .car-filter .col-sm-3 .btn-xehay {
+                .car-filter .col-sm-3 .btn-xiposg {
                     float: none;
                     margin-right: 0;
                     line-height: 21px;
