--- a/Source/TeduShop.Web/Views/Shared/CategoryXipo.cshtml
+++ b/Source/TeduShop.Web/Views/Shared/CategoryXipo.cshtml
@@ -18,7 +18,7 @@
 
             <div class="header-info">
                 <div data-click="Search" data-click-phase="0">
-                    <form method="POST" action="https://xehay.vn/tim-kiem" accept-charset="UTF-8" class="_539- roundedBox" id="searchBarClickRef" role="search">
+                    <form method="POST" action="https://xiposg.vn/tim-kiem" accept-charset="UTF-8" class="_539- roundedBox" id="searchBarClickRef" role="search">
                         <input name="_token" type="hidden" value="b6UqWAeFh1a05U5OT9TYwneNrirjIiD0hJQ0Z0b4">
                         <div class="smurfbarTopBorder"></div>
                         <div class="uiTypeahead" data-ft="{&quot;tn&quot;:&quot;+Q&quot;}" id="u_0_c">
@@ -27,7 +27,7 @@
                                 <div class="innerWrap">
                                     <span class="uiSearchInput textInput" id="u_0_d">
                                         <span>
-                                            <input type="text" name="keyword" value="" placeholder="Tìm kiếm nội dung trong Xe Hay" class="inputtext" maxlength="100" aria-label="Tìm kiếm" accesskey="/" aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead_list_u_0_c" aria-haspopup="true" role="combobox" spellcheck="false" singlestate="undefined" />
+                                            <input type="text" name="keyword" value="" placeholder="Tìm kiếm nội dung trong XipoSG" class="inputtext" maxlength="100" aria-label="Tìm kiếm" accesskey="/" aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead_list_u_0_c" aria-haspopup="true" role="combobox" spellcheck="false" singlestate="undefined" />
                                             <button type="submit" title="Nhập nội dung tìm kiếm">
                                                 <span class="accessible_elem">Tìm kiếm nội dung</span>
                                             </button>
@@ -92,7 +92,7 @@
                 </ul>
             </li>
             <li>
-                <a href='#'>Xe Hay TV</a>
+                <a href='#'>XipoSG TV</a>
                 <ul class="sub">
                     <li class='lisub'><a href='#'>Clip phóng sự</a></li>
                     <li class='lisub'><a href='#'>Hùng Lâm</a></li>
