--- a/Source/TeduShop.Web/Views/Shared/FooterXipo.cshtml
+++ b/Source/TeduShop.Web/Views/Shared/FooterXipo.cshtml
@@ -26,13 +26,13 @@
 
                         <p><em>Chịu trách nhiệm nội dung: Bùi Mai Linh</em></p>
 
-                        <p><em>Cơ quan chủ quản: Công ty TNHH Xe Hay</em></p>
+                        <p><em>Cơ quan chủ quản: Công ty TNHH XipoSG</em></p>
 
                         <p><em>Địa chỉ: P802A, Toà nhà 47 Lê Văn Hưu, quận Hai Bà Trưng, Hà Nội</em></p>
 
                         <p><em>Điện thoại: 0947924688</em></p>
 
-                        <p><em>Email: noidung@xehay.vn</em></p>
+                        <p><em>Email: noidung@xiposg.vn</em></p>
                     </div>
                     <div class="extra col-sm-6">
                         <p>
@@ -50,7 +50,7 @@
                                 <img src="/Assets/client/data/youtube.png" style="width: 28px; height: 28px;" />
                             </a>
                             <span class="g-plusone">&nbsp;</span>
-                            <span class="fb-like" data-action="like" data-href="https://www.facebook.com/xehay" data-layout="button" data-show-faces="true" style="text-align: center;">&nbsp;</span>
+                            <span class="fb-like" data-action="like" data-href="https://www.facebook.com/xiposg" data-layout="button" data-show-faces="true" style="text-align: center;">&nbsp;</span>
 
                         </p>
                         <p>
