--- a/Source/TeduShop.Web/Views/Shared/HeaderXipo.cshtml
+++ b/Source/TeduShop.Web/Views/Shared/HeaderXipo.cshtml
@@ -2,7 +2,7 @@
     <div class="mobile-top">
         <div class="wrapper-close-menu">&nbsp;</div>
         <div class="mobile-logo line-blue" style="background: #c6c6c6;">
-            <a href="#" title="Xe Hay | Chuyên trang thông tin, đánh giá xe ô tô xe máy">
+            <a href="#" title="XipoSG | Chuyên trang thông tin, đánh giá xe ô tô xe máy">
                 <img src="~/Assets/client/img/logo.png" />
             </a>
             <ul class="social-icons">
@@ -12,9 +12,9 @@
                 <li><a target="_blank" href="#" class="youtube"><i class="fa fa-youtube-play"></i></a></li>
             </ul>
             <div class="search-holder">
-                <form method="POST" action="https://xehay.vn/tim-kiem" accept-charset="UTF-8">
+                <form method="POST" action="https://xiposg.vn/tim-kiem" accept-charset="UTF-8">
                     <input name="_token" type="hidden" value="b6UqWAeFh1a05U5OT9TYwneNrirjIiD0hJQ0Z0b4">
-                    <input type="search" name="keyword" value="" placeholder="Tìm kiếm nội dung trong Xe Hay" />
+                    <input type="search" name="keyword" value="" placeholder="Tìm kiếm nội dung trong XipoSG" />
                 </form>
                 <i class="icon-close"></i>
             </div>
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href='#'>Xe Hay TV</a>
+                        <a href='#'>XipoSG TV</a>
                         <ul class="sub">
                             <li class='lisub'><a href='#'>Clip phóng sự</a></li>
                             <li class='lisub'><a href='#'>Hùng Lâm</a></li>
@@ -129,13 +129,13 @@
 
                         <p><em>Chịu trách nhiệm nội dung: Bùi Mai Linh</em></p>
 
-                        <p><em>Cơ quan chủ quản: Công ty TNHH Xe Hay</em></p>
+                        <p><em>Cơ quan chủ quản: Công ty TNHH XipoSG</em></p>
 
                         <p><em>Địa chỉ: P802A, Toà nhà 47 Lê Văn Hưu, quận Hai Bà Trưng, Hà Nội</em></p>
 
                         <p><em>Điện thoại: 0947924688</em></p>
 
-                        <p><em>Email: noidung@xehay.vn</em></p>
+                        <p><em>Email: noidung@xiposg.vn</em></p>
                     </li>
                 </ul>
 
@@ -171,7 +171,7 @@
 
             <div class="header-info">
                 <div data-click="Search" data-click-phase="0">
-                    <form method="POST" action="https://xehay.vn/tim-kiem" accept-charset="UTF-8" class="_539- roundedBox" id="searchBarClickRef" role="search">
+                    <form method="POST" action="https://xiposg.vn/tim-kiem" accept-charset="UTF-8" class="_539- roundedBox" id="searchBarClickRef" role="search">
                         <input name="_token" type="hidden" value="b6UqWAeFh1a05U5OT9TYwneNrirjIiD0hJQ0Z0b4">
                         <div class="smurfbarTopBorder"></div>
                         <div class="uiTypeahead" data-ft="{&quot;tn&quot;:&quot;+Q&quot;}" id="u_0_c">
@@ -180,7 +180,7 @@
                                 <div class="innerWrap">
                                     <span class="uiSearchInput textInput" id="u_0_d">
                                         <span>
-                                            <input type="text" name="keyword" value="" placeholder="Tìm kiếm nội dung trong Xe Hay" class="inputtext" maxlength="100" aria-label="Tìm kiếm" accesskey="/" aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead_list_u_0_c" aria-haspopup="true" role="combobox" spellcheck="false" singlestate="undefined" />
+                                            <input type="text" name="keyword" value="" placeholder="Tìm kiếm nội dung trong XipoSG" class="inputtext" maxlength="100" aria-label="Tìm kiếm" accesskey="/" aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead_list_u_0_c" aria-haspopup="true" role="combobox" spellcheck="false" singlestate="undefined" />
                                             <button type="submit" title="Nhập nội dung tìm kiếm">
                                                 <span class="accessible_elem">Tìm kiếm nội dung</span>
                                             </button>
@@ -229,7 +229,7 @@
                 </ul>
             </li>
             <li>
-                <a href='#'>Xe Hay TV</a>
+                <a href='#'>XipoSG TV</a>
                 <ul class="sub">
                     <li class='lisub'><a href='#'>Clip phóng sự</a></li>
                     <li class='lisub'><a href='#'>Hùng Lâm</a></li>
@@ -306,7 +306,6 @@
 
         </ul>
     </nav>
-    <script src="js/jquery.menu-aim.js"></script>
     <div class="banner-home-2AB banner-1000px relative" style="position: relative;">
         <div id="banner2ab">
 
