--- a/Source/TeduShop.Web/Views/Home/Index.cshtml
+++ b/Source/TeduShop.Web/Views/Home/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿@using TeduShop.Common.Core;
 @using TeduShop.Model.Models;
 @model TeduShop.Web.Models.HomeViewModel
-@{ ViewBag.Title = Model.Title;
-    ViewBag.MetaKeyword = Model.MetaKeyword;
-    ViewBag.MetaDescription = Model.MetaDescription;
+@{ 
     Layout = "~/Views/Shared/LayoutsXipo.cshtml";}
 <div class="body">
     <div class="top-news-home andy-home-blade">
@@ -94,9 +92,8 @@
                 </div>
                 <div class="banner-home-3A" id="banner3a" style="margin-bottom: 8px;background: #cccccc;height: 250px;width: 300px; position: relative;">
                     <a target="_blank" class="href_ads_home3B" href="#" style="position: absolute; width: 100%; height: 100%;"> </a>
-                    <img src="~/Assets/client/data/300x250.jpg">
-                    <script src="js/:"></script>
-                    <script type="application/javascript" src="js/skeleton.js"></script> <noscript><img src="/Assets/client/data/:" border=0 width=1 height=1 alt=""></noscript>
+                    <img src="/Assets/client/data/300x250.jpg"/>
+<noscript><img src="/Assets/client/data/:" border=0 width=1 height=1 alt=""></noscript>
                 </div>
 
 
@@ -278,7 +275,7 @@
             </div>
             <div class="box home-video">
                 <h2 class="title">
-                    <a href="#" title="Video">XE HAY TV</a>
+                    <a href="#" title="Video">XipoSG TV</a>
                 </h2>
                 <div class="list-items">
                     <iframe style="position: relative" width="300" height="169" src="https://www.youtube-nocookie.com/embed/LynmuqEKhgk?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
